--- a/index.html
+++ b/index.html
@@ -126,6 +126,17 @@ ga('send', {
   page: 'home'
 });
 
+// Feature detects Navigation Timing API support.
+if (window.performance) {
+  // Gets the number of milliseconds since page load
+  // (and rounds the result since the value must be an integer).
+  var timeSincePageLoad = Math.round(performance.now());
+
+  // Sends the timing hit to Google Analytics.
+  ga('send', 'timing', 'JS Dependencies', 'load', timeSincePageLoad);
+}
+
+
 </script>
 
 <button onclick="myFunction()">Click me</button>
