--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@ input
 
   ga('create', 'UA-119172463-1', {'userId': customUserId});   // If "User ID" feature is available
   ga('require', 'displayfeatures');
+  ga('require', 'ecommerce');
   ga('set', 'dimension1', customUserId);                  // Set a `customUserId` dimension at page level
   ga('send', 'pageview');
 
@@ -147,6 +148,26 @@ if (window.performance) {
   ga('send', 'timing', 'JS Dependencies', 'load', timeSincePageLoad);
 }
 
+
+//Ecommerce
+ga('ecommerce:addTransaction', {
+  'id': '1234',                     // Transaction ID. Required.
+  'affiliation': 'Acme Clothing',   // Affiliation or store name.
+  'revenue': '11.99',               // Grand Total.
+  'shipping': '5',                  // Shipping.
+  'tax': '1.29'                     // Tax.
+});
+
+ga('ecommerce:addItem', {
+  'id': '1234',                     // Transaction ID. Required.
+  'name': 'Fluffy Pink Bunnies',    // Product name. Required.
+  'sku': 'DD23444',                 // SKU/code.
+  'category': 'Party Toys',         // Category or variation.
+  'price': '11.99',                 // Unit price.
+  'quantity': '1'                   // Quantity.
+});
+
+ga('ecommerce:send');
 
 </script>
 
