--- a/index.html
+++ b/index.html
@@ -114,10 +114,10 @@ function myFunction() {
 
 // Gets a reference to the form element, assuming
 // it contains the id attribute "signup-form".
-var form = document.getElementById('signup-form');
+//var form = document.getElementById('signup-form');
 
 // Adds a listener for the "submit" event.
-form.addEventListener('submit', function(event) {
+/*form.addEventListener('submit', function(event) {
 
   // Prevents the browser from submitting the form
   // and thus unloading the current page.
@@ -130,7 +130,7 @@ form.addEventListener('submit', function(event) {
       form.submit();
     }
   });
-});
+});*/
 
 
 ga('send', {
