--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@ input
   ga('require', 'ec');
   ga('set', 'dimension1', customUserId);                  // Set a `customUserId` dimension at page level
   ga('send', 'pageview');
+  ga('require', 'linkid', 'linkid.js');
 
 </script>
 <script>
